# discord-bot

./: .gitignore  .pylintrc  README.md  dev.py  package.json  pyproject.toml  run  run.py  slash-up.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: request-command.md
.github/workflows/: linting.yml
authentication/complete-auth-lambda/: index.py  pyproject.toml
authentication/src/complete-auth-lambda/: index.py
authentication/src/save-data-lambda/: index.py  pyproject.toml
authentication/src/start-auth-lambda/: index.py
authentication/start-auth-lambda/: index.py  pyproject.toml
authentication/terraform/: main.tf  variables.tf
bot/: main.py  pyproject.toml
bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bot/cogs/: automod.py  dice.py  groups.py  info.py  manage.py  member.py  owner.py  purge.py  repo.py  sync.py  team.py  thalia_night.py  whoami.py
bot/core/: bot.py  help.py
bot/src/: main.py
bot/src/cogs/: greetings.py  owner.py  token_refresh.py  whoami.py
bot/src/core/: bot.py
bot/terraform/: main.tf  variables.tf
common/: bot_logger.py  constants.py  ddb.py  discord_helper.py  helper_functions.py  thalia_api.py  thalia_oauth.py
common/src/: bot_logger.py  ddb.py  thalia_api.py  thalia_oauth.py
common/terraform/: main.tf
infra/modules/bot/: lambdas.tf  main.tf  variables.tf
infra/stages/develop/: main.tf  terraform.tfvars
infra/stages/production/: main.tf  terraform.tfvars  variables.tf
resources/: deploy_ec2.sh
src/: postInEntrance.ts
src/authentication/complete/: index.ts
src/authentication/start/: index.ts
src/bot/: index.ts
src/bot/commands/: connect.ts  hello.ts  (+3 more)
src/common/: ddb.ts  discord.ts  sync.ts  thalia_api.ts
(+32 files in other folders)
