[tool.poetry]
name = "save-data-lambda"
version = "1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
authlib = "^0.14.3"
httpx = "0.14.1"
aioboto3 = "^8.0.5"
"discord.py" = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
